test/sema/traits/trait_requirement_not_implemented_generic.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
trait B<T> {}

trait A : B<number> & B<unit> {}

struct S {
    impl A;
    // CHECK: [[# @LINE - 1 ]]:10: error: implementing trait 'A' requires implementing trait 'B<number>'
    // CHECK: [[# @LINE - 2 ]]:10: error: implementing trait 'A' requires implementing trait 'B<unit>'
}

fn main() {}
